tests/src/frontend/typechecking/exhaustiveness/invalid/type_alias_non_child.sk
base class Expr {
  children =
  | Plus(Expr, Expr)
  | Value(Int)
}

class Test() {
  type T = Plus;

  fun test(x: this::T): Int {
    x match {
    | Value(i) -> i
    | this::T(_, _) -> 2
    }
  }
}
